@@ -1,22 +1,20 @@
 package io.jenkins.tools.pluginmanager.util;
 
+import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
+import io.jenkins.tools.pluginmanager.config.Settings;
 import java.io.File;
 import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
-import java.net.HttpURLConnection;
-import java.net.URL;
+import java.net.*;
 import java.nio.file.Files;
+import java.util.Arrays;
 import java.util.Enumeration;
 import java.util.jar.JarEntry;
 import java.util.jar.JarFile;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
-
 import org.apache.commons.io.IOUtils;
-import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
-
-import io.jenkins.tools.pluginmanager.config.Settings;
 
 import static java.util.Objects.requireNonNull;
 
@@ -187,6 +185,7 @@ public final class PluginManagerUtils {
      * @param cacheSuffix The suffix for the Jenkins version (e.g., "-2.414.3")
      * @param jenkinsArchiveRepoMirror The URL of the Jenkins archive repository mirror (optional)
      * @return The resolved URL for the update center or null if not found
+     * @throws InvalidUrlException if the URL construction or validation fails
      */
     public static URL resolveArchiveUpdateCenterUrl(String cacheSuffix, URL jenkinsArchiveRepoMirror) {
         if (cacheSuffix == null || !cacheSuffix.startsWith("-")) {
@@ -219,37 +218,73 @@ public final class PluginManagerUtils {
      * @param url The URL to check
      * @return true if the URL is valid (returns HTTP 200), false otherwise
      */
-    private static boolean isValidUrl(URL url) {
+    @SuppressFBWarnings("URLCONNECTION_SSRF_FD")
+    private static boolean isValidUrl(final URL url) {
+        if (url == null) {
+            throw new IllegalArgumentException("URL must not be null");
+        }
+
+        String protocol = url.getProtocol();
+        if (!Arrays.asList("http", "https").contains(protocol)) {
+            throw new IllegalArgumentException("Invalid protocol: " + protocol);
+        }
+
+        if (url.getHost() == null) {
+            throw new IllegalArgumentException("URL must have a valid host");
+        }
+
+        HttpURLConnection connection = null;
         try {
-            String protocol = url.getProtocol();
-            if (!"http".equalsIgnoreCase(protocol) && !"https".equalsIgnoreCase(protocol)) {
-                return false;
-            }
-            HttpURLConnection connection = (HttpURLConnection) url.openConnection();
-            connection.setRequestMethod("GET");
+            connection = (HttpURLConnection) url.openConnection();
+            connection.setRequestMethod("HEAD"); // Use HEAD to avoid downloading the entire resource
             connection.setConnectTimeout(5000); // Timeout in case the server is slow to respond
             connection.setReadTimeout(5000);
+            connection.setInstanceFollowRedirects(false); // Disable automatic redirects
+
             int responseCode = connection.getResponseCode();
-            return responseCode == HttpURLConnection.HTTP_OK;
+            return responseCode >= 200 && responseCode < 300;
         } catch (IOException e) {
             return false;
+        } finally {
+            if (connection != null) {
+                connection.disconnect(); // Ensure the connection is closed
+            }
         }
     }
 
     /**
      * Constructs a URL by combining a base URL and a path.
-     * If the resulting URL is invalid, an {@link IllegalArgumentException} is thrown.
+     * If the resulting URL is invalid, throws a custom unchecked exception.
      *
-     * @param baseUrl the base URL to which the path will be appended (e.g., "https:// archives.jenkins.io/")
+     * @param baseUrl the base URL to which the path will be appended (e.g., "https://archives.jenkins.io/")
      * @param path the path to append to the base URL (e.g., "updates/update-center.json")
      * @return the constructed URL
-     * @throws IllegalArgumentException if the resulting URL is invalid
+     * @throws InvalidUrlException if the URL construction fails
      */
-    private static URL constructUrl(String baseUrl, String path) {
+    @SuppressFBWarnings("EXS_EXCEPTION_SOFTENING_NO_CONSTRAINTS")
+    private static URL constructUrl(String baseUrl, String path) throws InvalidUrlException {
+
+        if (baseUrl == null || baseUrl.isEmpty()) {
+            throw new InvalidUrlException("Base URL must not be null or empty");
+        }
+
+        if (path == null) {
+            throw new InvalidUrlException("Path must not be null");
+        }
+
+        if (!baseUrl.matches("^(https?://).+")) {
+            throw new InvalidUrlException("Base URL must start with http:// or https://");
+        }
+
+        String urlString = baseUrl + path;
         try {
-            return new URL(baseUrl + path);
-        } catch (Exception e) {
-            throw new IllegalArgumentException("Invalid URL construction: " + baseUrl + path, e);
+            URI uri = new URI(urlString);
+            if (uri.getScheme() == null || uri.getHost() == null) {
+                throw new InvalidUrlException("Invalid URL: scheme or host is missing");
+            }
+            return uri.toURL();
+        } catch (URISyntaxException | MalformedURLException e) {
+            throw new InvalidUrlException("Invalid URL construction: " + urlString, e);
         }
     }
 
